Changes in 0.50.1:
  * Add support for trove=<troveVersion> in rq, cvc co, and other places that 
    use findTrove
  * Add conary q --info option to display flavors

Changes in 0.50.0:
  * Redirections work
  * Sped up group generation
  * Troves which reference other troves (groups and packages) can now specify
    whether a trove is installed by default or not. Packages now reference 
    :test, but don't install it by default
  * Added optional 'recurse' parameter to netclient.createChangeSetFile
  * The first argument to the Requires and TagSpec commands can now have
    macros interpolated, as in r.Requires('%(bindir)s/foo', ...)
  * Groups can have requirements now
  * protocol-level getFileContents works on multiple files simultaneously
  * repository log had too many files added to it
  * set instruction set flavor for a cooked trove whenever any Arch flags are 
    checked

Changes in 0.14.12:
  * The shadow command looks at buildLabel instead of following
    installLabelPath
  * In some cases, troves with an incompatible flavor were chosen when
    --resolve was used. The proper flavor is now used, or the
    dependency is reported as unsatisfiable.
  * Several more instances of %(lib)s were moved out of the default
    specification for generic components like :runtime and :devel for
    better multilib support.
  * Policy now helps ensure that :python components are either
    architecture-neutral or multilib-friendly.
  * Better error messages for "%(foo)/" (which should be "%(foo)s/")
  * Looking up files in the local database gave erroneous results in 
    some cases (this was noticeably primarily when distributed change
    sets were being generated)

Changes in 0.14.11:
  * Local systems store config files in sql tables now.  Use
    /usr/share/conary/convertcontents to convert to the new data store.
    Note that this means that any *config file* managed by conary can be
    read through the main SQL database file in /var/lib/conarydb/conarydb.